# aws-lambda-mongo-backup

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  deploy.sh  lambda_function.py  main.tf  pyproject.toml
src/: lambda_function.py
